--- a/aws1-values.yaml
+++ b/aws1-values.yaml
@@ -95,6 +95,13 @@ qix-data-connection:
   mongodb:
     enabled: false
 
+qix-datafiles:
+  persistence:
+    enabled: true
+    accessMode: ReadWriteMany
+    storageClass: "qix-datafiles"
+    existingClaim: "aws1-efs-vol-1"
+
 feature-flags:
   configmaps:
     create: true
